--- a/frontend/src/pages/Auth/Auth.css
+++ b/frontend/src/pages/Auth/Auth.css
@@ -2,6 +2,7 @@
 	width: 100%;
 	height: 100dvh;
 	display: flex;
+	background-color: var(--color-bg);
 }
 
 .left-side {
@@ -60,13 +61,13 @@
 				h1 {
 					text-align: center;
 					font-size: 3rem;
-					color: var(--color-text);
+					color: var(--color-primary-text);
 				}
 
 				p {
 					margin-bottom: 2rem;
 					text-align: center;
-					color: var(--color-text);
+					color: var(--color-primary-text);
 					font-size: 1rem;
 				}
 
